src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@import "../variables.less";
@import "../mixins.less";

.advert {
  background: #fff;
  margin: 0 auto 30px;
  border: 1px solid @border-color;
  border-radius: 5px;
  box-shadow: 0 0 1px #aaa;

  .dropdown-menu {
    border-right: 0;
    min-width: initial;
    text-transform: uppercase;
  }
  .media-heading {
    line-height: 1;
  }
}

.advert-object {
  position: relative;
  overflow: hidden;
  max-height: 9999px;
  background: #000 url("../img/loader.gif") no-repeat center;
  border-radius: 5px 5px 0 0;
  .transition(max-height ease .2s);

  &:hover .advert-expand {
    background: rgba(0,0,0,.5);
    color: #fff;
  }
}

.advert-object.limit {
  max-height: @advert-limit !important;
  .transition(max-height ease .2s);
}

.advert-expand {
  position: absolute;
  width: 100%;
  text-decoration: none;
  text-align: center;
  bottom: 0;
  font-size: 30px;
  line-height: 1;
  color: rgba(255,255,255,.5);
  #gradient > .vertical(rgba(0,0,0,0), rgba(0,0,0,.3));
  .transition(background ease .2s);

  &:hover {
    text-decoration: none;
    text-shadow: 0 0 5px #fff;
  }
}

.advert-expand.icon:before {
  content: "\e627";
}
.advert-expand.collapsed.icon:before {
  content: "\e628";
}

.advert-img {
  border-radius: 5px 5px 0 0;

  img {
    .img-responsive(block);
    margin: 0 auto;
  }

  img.full {
    border-radius: 5px 5px 0 0;
  }
}

.comment-box {
  width: 100%;
  display: block;
  height: 34px;
  padding: 5px;
  font-size: 12px;
  line-height: 16px;
  background-color: #eee;
  resize: none;
  border: 1px solid @border-color;
  .border-bottom-radius(@border-radius-base);
  overflow: hidden;
  position: relative;

  &:focus {
    outline: 0;
    background-color: #fff;
  }
}

.jscroll-added .advert:first-child {
  margin-top: 15px;
}

.advert-text {
  background: #333;
  color: #fff !important;

  .advert-text-content {
    padding: 15px;
  }

  h3 {
    text-align: center;
    margin: 0 0 15px 0;
  }
  .advert-tags a {
    color: #aaa;
  }
}

.advert-tags {
  font-size: 13px;
  margin-top: 5px;
  a {
    color: #999;
  }
}

.advert-detail {
  position: relative;
  z-index: 1;
  border-top: 1px solid @border-color;
  border-bottom: 1px solid @border-color;
  box-shadow: 0 1px 3px rgba(0,0,0,0.175);
  padding: 10px 15px;
}

.advert-desc {
  font-size: 12px;
  margin: 10px 0 0;
  .hyphens();
  ul {
    margin-top: 10px;
  }
}

.advert-action {
  background: #f2f2f2;
  border-bottom: 1px solid @border-color;

  .btn {
    height: 46px;
    border-bottom: 0;
    border-radius: 0 !important;
  }

  .promote {
    border: 0;
    border-right: 1px solid @border-color;
  }
  .unpromote {
    border: 0;
    background-color: #fff;
    color: @brand-primary;
    border-right: 1px solid @border-color;
    border-left: 1px solid @border-color;
  }

  .pull-right .btn {
    border: 0;
    border-left: 1px solid @border-color;
  }

  a {
    font-size: 12px;

    .icon {
      font-size: 16px;
    }

    span {
      display: block;
    }
  }
}

.advert-action-content {
  position: relative;

  .advert-share {
    display: none;
    z-index: @zindex-dropdown;
    .box-shadow(0 6px 12px rgba(0,0,0,.175));
    background-clip: padding-box;
    position: absolute;
    top: 0;
    background-color: #fff;
  }
  .url {
    text-align: center;
    color: #555;
    padding: 5px;
    border: solid @border-color;
    border-width: 1px 1px 0;
    width: 100%;
  }

  .advert-share, .advert-comment {
    padding: 10px 15px;
    border-top: 1px solid @border-color;
  }
}

.advert-broadcasts {
  padding: 13px 10px;
  width: 295px;
  color: #aaa;
  a {
    font-size: 14px;
    color: @bootstrap-blue;
    font-weight: bold;
  }
}

.advert-comments-container {
  padding-top: 3px;
}
.advert-comments {
  padding: 5px 15px 10px 15px;

  .media,
  .media .media {
    margin-top: 10px;
  }
  .media:first-child {
    margin-top: 0;
  }

  .media,.media-body {
    overflow: visible;
  }

  .media-body {
    font-size: 12px;
    line-height: 16px;

    p {
      margin: 0;
    }
  }
  .realname {
    font-size: 13px;
  }
  .username {
    font-size: 12px;
  }
  time {
    font-size: 11px;
    color: #aaa;
  }
}

.media + .comment {
  margin-top: 10px;
}

.delete-comment {
  display: none;
  font-size: 14px;
  color: #999;

  &:hover {
    text-decoration: none;
  }
}
.comment {
  .comment-body {
    margin-left: 42px;
  }

  .mentions-input-box .mentions-autocomplete-list {
    position: relative;
    float: left;
    margin-top: -1px;
  }
  &:hover {
    .delete-comment {
      display: inline;
    }
  }
}


.load-more-comments {
  font-size: 13px;
  font-weight: bold;
  padding: 3px 0 3px 0;
  text-align: center;
  height: 23px;
  a {
    color: #999;
  }
}

@media (min-width: 481px) {

}

@media (min-width: 600px) {
}

@media (min-width: 720px) {

}

.advert-user {
  line-height: 32px;
  img {
    margin-right: 10px;
  }

  time {
    color: #aaa;
    font-size: 12px;
    float: right;
  }
}

.promote,
.unpromote {
  width: 94px;
}

.unpromote:hover {
  margin-left: 0;
  color: @gray-light;
}

